# rust-trains

branches/: Cargo.toml
branches/src/: main.rs
demo/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_rocket/: Cargo.toml
hello_rocket/src/: main.rs
hello_wasm/: .gitignore  Cargo.toml
hello_wasm/src/: lib.rs
hello_wasm/test/: index.js
hello_web/: Cargo.toml  hello.html
hello_web/src/: main.rs
hello_world/: format.rs  main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
minigrep/: Cargo.toml  poem.txt
minigrep/src/: lib.rs  main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
primitives/: literals_operators.rs
struct_demo/: Cargo.toml
struct_demo/src/: main.rs
thumbor/: Cargo.toml  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.proto  abi.rs  mod.rs
variables/: Cargo.toml
variables/src/: main.rs
wasm-game-of-life/: .gitignore  Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/tests/: web.rs
wasm-game-of-life/www/: index.html  index.js  package.json
