[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.2.14", features = ['derive']}
reqwest = {version = "0.11.11", features = ["json"]}
tokio = {version = "1.20.3", features = ["full"]}
mime = "0.3.16"
jsonxf = "1.1.1"
colored = "2.0.0"