[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
anyhow = "1.0.58"
bytes = "1.2.0"
prost = "0.10.4"
base64 = "0.13.0"
tokio = {version = "1.20.0", features = ["full"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
percent-encoding = "2.1.0"
serde = {version = "1.0.140", features = ["derive"]}

[build-dependencies]
prost-build = "0.10.4"
